<resources>
    <string name="app_name">Flashcards To Go</string>
    <string name="empty_string"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_new_flashcard_set">New Flashcard Set</string>
    <string name="actions_dialog">Actions</string>

    <string name="menu_flashcard_set">Flashcard Sets</string>
    <string name="menu_achievement">Leaderboard/Achievements</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Sign Out</string>

    <string name="title_flashcard_set">Flashcard Sets</string>
    <string name="title_achievement">Leaderboard/Achievements</string>
    <string name="title_login">Login</string>
    <string name="title_create_flashcard">Create Flashcard</string>
    <string name="title_edit_flashcard">Edit Flashcard</string>

    <string name="add_flashcard_description">Give a title to your flashcard set</string>
    <string name="create_text">Create</string>

    <string name="practice_text">Practice</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>

    <string name="leaderboard_title">Leaderboard</string>
    <string name="achievement_title">Achievements</string>

    <string name="term_hint">Term</string>
    <string name="definition_hint">Definition</string>
    <string name="audio_desc">Listen to audio on this card</string>
    <string name="desc_mic">Record audio on this card</string>
    <string name="submit_edit_card">Submit</string>
</resources>