<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/actions_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/actions_dialog"
        android:textAlignment="center"
        android:textColor="@color/app_black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/practice_button"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/practice_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/edit_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_text"
        android:textColor="@color/white" />
</LinearLayout>